# mx-usb-unmounter

./: .gitignore  CMakeLists.txt  MxUxot.json  PKGBUILD  README.md  about.cpp  build.sh  deviceutils.h  license.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-usb-unmounter  mx-usb-unmounter.desktop  mx-usb-unmounter.pro  mx-usb-unmounter_0.16.4mx15+nmu1.dsc  mx-usb-unmounter_0.16.4mx15+nmu1.tar.xz  mx-usb-unmounter_0.16.4mx15+nmu1_amd64.build  mx-usb-unmounter_0.16.4mx15+nmu1_amd64.changes  mx-usb-unmounter_0.16.4mx15+nmu1_amd64.deb  mx-usb-unmounter_0.16.4mx15+nmu1_i386.changes  mx-usb-unmounter_0.16.4mx15+nmu1_i386.deb  mx-usb-unmounter_16.10mx16+1.dsc  mx-usb-unmounter_16.10mx16+1.tar.xz  mx-usb-unmounter_16.10mx16+1_amd64.changes  mx-usb-unmounter_16.10mx16+1_amd64.deb  mx-usb-unmounter_16.10mx16+1_i386.changes  mx-usb-unmounter_16.10mx16+1_i386.deb  mx-usb-unmounter_16.10mx16.dsc  mx-usb-unmounter_16.10mx16.tar.xz  mx-usb-unmounter_16.10mx16_amd64.changes  mx-usb-unmounter_16.10mx16_amd64.deb  mx-usb-unmounter_16.10mx16_i386.changes  mx-usb-unmounter_16.10mx16_i386.deb  mx-usb-unmounter_16.10mx16_source.changes  mx-usb-unmounter_16.11mx16+1.dsc  mx-usb-unmounter_16.11mx16+1.tar.xz  mx-usb-unmounter_16.11mx16+1_amd64.changes  mx-usb-unmounter_16.11mx16+1_amd64.deb  (+83 more)
app/: mx-usb-unmounter_17.04mx16.dsc  usb-unmounter-start  usbunmounter.cpp  usbunmounter.h
autostart/: mx-usb-unmounter.desktop
debian/: changelog  control  copyright  files  install  mx-usb-unmounter.substvars  rules  usbunmounter.substvars
tests/: CMakeLists.txt  test_main.cpp
(+514 files in other folders)
